--- a/gb/20/10/27/n12504033.md
+++ b/gb/20/10/27/n12504033.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nmtmqj3756/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nmtmqj3756/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nmtmqj3756/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nmtmqj3756/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nmtmqj3756/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>纽约挺川游行 华裔年轻人说缘由</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/144590-600x400.png" />
-<h6>华裔大学生鲁西安特地从波士顿赶到纽约参加挺川大游行。（施萍/大纪元）
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/144605-600x400.jpg" />
+<h6>华裔大学生鲁西安特地从波士顿赶到纽约参加挺川大游行。（施萍／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年10月27日讯】（大纪元记者施萍纽约报导）10月25日周日，<ahref="https://github.com/nmtmqj3756/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82.md#1">纽约市</a><ahref="https://github.com/nmtmqj3756/djy/blob/master/gb/tag/%E6%8C%BA%E5%B7%9D.md#1">挺川</a>大游行中出现了几个年轻的华人身影，他们有的是从另外的城市赶过来参加游行的。他们说，过来支持川普是为了“保留民主、自由等美国最基本的价值观”和杜绝“养懒人、烂人的社会主义”。其中有人谈到了包括在美国长大或者求学的很多华人二代在内的年轻一代为什么喜欢民主党。</p>
+	<p>【大纪元2020年10月27日讯】（大纪元记者施萍纽约报导）10月25日周日，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6%E5%B8%82.md#1">纽约市</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8C%BA%E5%B7%9D.md#1">挺川</a>大游行中出现了几个年轻的华人身影，他们有的是从另外的城市赶过来参加游行的。他们说，过来支持川普是为了“保留民主、自由等美国最基本的价值观”和杜绝“养懒人、烂人的社会主义”。其中有人谈到了包括在美国长大或者求学的很多华人二代在内的年轻一代为什么喜欢民主党。</p>
 <p>一对休士顿的母子早早站在川普大厦前，他们本来在纽约短住，从社交媒体上听到游行的消息，就兴奋地赶过来参加。听口音他们是上海人。两人有一肚子话要说，特别翻出手机，拿出一条代表他们的心声的短信来表达。</p>
 <p>“这次大选是美国历史上生死攸关的一次选举，决定着我们每个人的未来。如果美国一味的左下去，任凭流氓打砸抢与袭警杀警，没有法律和秩序，那么华裔将是最大的受害者——社会主义大政府专门养懒人、烂人，勤劳守法的华人难以出头不说，下一代也会变的好吃懒做、游手好闲。”他们说，“所以华人一定更要把选票投给川普这个抛弃财富来做总统的实干家、这个不惜与世界为敌也要‘美国第一’的大嘴巴的爱国者！”</p>
-<p>在纽约上大学但因疫情回到波士顿的鲁西恩一直在时代广场听完所有人的演讲，并拍手叫好。她妈妈说，她一直是个川普支持者，在别人都不敢出来<ahref="https://github.com/nmtmqj3756/djy/blob/master/gb/tag/%E6%8C%BA%E5%B7%9D.md#1">挺川</a>的时候，她就戴着写着“川普”的口罩到大街上去，也不害怕。</p>
+<p>在纽约上大学但因疫情回到波士顿的鲁西恩一直在时代广场听完所有人的演讲，并拍手叫好。她妈妈说，她一直是个川普支持者，在别人都不敢出来<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%8C%BA%E5%B7%9D.md#1">挺川</a>的时候，她就戴着写着“川普”的口罩到大街上去，也不害怕。</p>
 <p>“我不希望美国成为社会主义，socialism。”这个漂亮的姑娘用中文说完这一句之后，不自觉地转用英文表达，“社会主义在哪里也行不通，根本不行！”</p>
 <p>“我们来到美国学习这里的文化，热爱这个国家是因为美国的精神、美国的价值观，不是让美国成为社会主义的！”她说。“美国是一个所有人都向往的国家，如果美国变成社会主义，那全世界都将变得混乱不堪。这个被神祝福的国家绝不能变成那样！愿上帝保佑美国！”</p>
 <p>卢西恩说，她之所以有这种“爱国的”、“保守的”思想是因为受父母的影响。她的父亲当年是北大学生，亲历过六·四共产党对学生的屠杀；另外，她父母的一个好朋友因为修炼法轮功在监狱被共产党迫害死了。</p>
@@ -35,42 +35,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12499738.md#1">响应全球声援 纽约港人为12被拘留者发声</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12499744.md#1">组图：纽约市民踊跃投票 排队至少3.5小时</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12499776.md#1">纽约华人投票热情高“在中国享受不到的权利”</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12500050.md#1">提前投票首日  纽约市近9.4万人投票</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/25/n12499738.md#1">响应全球声援 纽约港人为12被拘留者发声</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/25/n12499744.md#1">组图：纽约市民踊跃投票 排队至少3.5小时</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/25/n12499776.md#1">纽约华人投票热情高“在中国享受不到的权利”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/25/n12500050.md#1">提前投票首日  纽约市近9.4万人投票</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/19/n11123506.md#1" target="_blank">林辉：朱德曾被德国驱逐 效力中共晚景凄凉</a></li><li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307862.md#1" target="_blank">中共淫乱的前生今世（11）前车之鉴</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/14/n12475763.md#1">轮回转生名案：4岁娃难忘前生情 丈夫儿子来相认</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/9/3/n12378293.md#1">【西安事变?蒋宋夫妇】引狼入室 西安谋主</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/9/30/n12442831.md#1">《圣经》与《推背图》预言的应验与变换3</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/9/30/n12440579.md#1">《圣经》与《推背图》预言的应验与变换2</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/18/n12484999.md#1">【石窟探秘】石破天惊的佛像 预示朝代兴衰</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12500714.md#1">【珍言真语】程翔：五中全会前欲赴京 林郑自辱</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/26/n12501734.md#1">严真点评&#038;外交部大实话：川普冲刺 习总动员</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/26/n12501754.md#1">【大陆新闻解毒 】时事小品：放狗式</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/23/n12498007.md#1">唐嫣产后复出拍戏 首部作品搭档胡歌</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/23/n12498015.md#1">【新闻看点】FBI约谈关键证人 中共方寸乱？</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/24/n12498760.md#1">母爱亘古不变 台中出土五千年前母子相拥遗骨</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/23/n12498007.md#1">唐嫣产后复出拍戏 首部作品搭档胡歌</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12501371.md#1">港星爆拍戏趣事：演员爱吃道具饭皆因周润发</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/23/n12497637.md#1">阿汤哥拍《碟中谍7》 戴口罩跳船令人心惊</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/23/n12497828.md#1">女星高定礼服来源遭疑 范冰冰造型师否认借出</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12501492.md#1">迎候老婆高圆圆下班 赵又廷俏皮蹲下请安</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/9/10/n12393841.md#1">看不惯饲主遛狗不清便？用这招威力超猛</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/23/n12497915.md#1">身体有4种“快乐物质” 抗压力解忧郁 还能止痛</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12500332.md#1">容易移动和部署 俄军用充气坦克欺敌</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12500137.md#1">身在几百公里天外 美国女太空人完成投票</a></li>
-<li><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/25/n12500289.md#1">不一样的德国特产──意大利面冰淇淋</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nmtmqj3756/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nmtmqj3756/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/27/n12504033.htm">纽约挺川游行 华裔年轻人说缘由</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/27/n12504033.htm">纽约挺川游行 华裔年轻人说缘由</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nmtmqj3756/djy/blob/master/gb/20/10/27/n12504033.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nmtmqj3756/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nmtmqj3756/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nmtmqj3756/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmtmqj3756/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/10/27/n12504033.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
